projects/compiler/test/typechecker/indexing/string_error_idx_non_int.out
Error at %FILE_NAME%:2:5
Type mismatch
  |  str[1.2]
         ^
Expected: Int
but instead found: Float
