projects/compiler/test/typechecker/indexing/string_error_idx_non_int.abra
val str = "abcd"
str[1.2]